// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          >
            <svg
              aria-hidden="true"
              data-content="965fe321"
              fill="none"
              height="17.6580310880829"
              viewBox="0 0 23.16 17.04"
              width="24"
            />
          </div>
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="homeNavigation"
    >
      <nav
        aria-label="AI Workspace navigation"
        class="aiWorkspace aiWorkspaceRail"
      >
        <ul
          class="aiWorkspaceList"
        >
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Command · Overview"
              aria-pressed="true"
              class="workspaceButton workspaceButtonActive"
              data-workspace="command"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar command"
                data-mascot-shape="blob"
                data-state="idle"
                data-workspace-identity="command"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Projects · Portfolio"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="projects"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar projects"
                data-mascot-shape="capsule"
                data-state="idle"
                data-workspace-identity="projects"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Work · Production"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="work"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar work"
                data-mascot-shape="crystal"
                data-state="idle"
                data-workspace-identity="work"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Studios · Creative"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="studios"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar studios"
                data-mascot-shape="wedge"
                data-state="idle"
                data-workspace-identity="studios"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Radar · Signals"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="radar"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar radar"
                data-mascot-shape="cloud"
                data-state="idle"
                data-workspace-identity="radar"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="17.6580310880829"
                viewBox="0 0 23.16 17.04"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                DSH Local Build
              </span>
              <span
                class="buildRevision"
              >
                abc1234
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="homeNavigation wide"
    >
      <nav
        aria-label="AI Workspace navigation"
        class="aiWorkspace"
      >
        <h2
          class="groupHeading"
        >
          AI Workspace
        </h2>
        <ul
          class="aiWorkspaceList"
        >
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Command · Overview"
              aria-pressed="true"
              class="workspaceButton workspaceButtonActive"
              data-workspace="command"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar command"
                data-mascot-shape="blob"
                data-state="idle"
                data-workspace-identity="command"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Projects · Portfolio"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="projects"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar projects"
                data-mascot-shape="capsule"
                data-state="idle"
                data-workspace-identity="projects"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Work · Production"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="work"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar work"
                data-mascot-shape="crystal"
                data-state="idle"
                data-workspace-identity="work"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Studios · Creative"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="studios"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar studios"
                data-mascot-shape="wedge"
                data-state="idle"
                data-workspace-identity="studios"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Radar · Signals"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="radar"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar radar"
                data-mascot-shape="cloud"
                data-state="idle"
                data-workspace-identity="radar"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
        </ul>
      </nav>
      <section
        aria-labelledby="harness-tools-heading"
        class="harnessTools"
      >
        <button
          aria-controls="harness-tools-list"
          aria-expanded="false"
          class="harnessMore"
          id="harness-tools-heading"
          type="button"
        >
          <span
            aria-hidden="true"
            class="harnessMoreGlyph"
          >
            ›
          </span>
          More tools
        </button>
      </section>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="17.6580310880829"
                viewBox="0 0 23.16 17.04"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                DSH Local Build
              </span>
              <span
                class="buildRevision"
              >
                abc1234
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="homeNavigation wide"
    >
      <nav
        aria-label="AI Workspace 一级入口"
        class="aiWorkspace"
      >
        <h2
          class="groupHeading"
        >
          AI Workspace
        </h2>
        <ul
          class="aiWorkspaceList"
        >
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Command · 总控"
              aria-pressed="true"
              class="workspaceButton workspaceButtonActive"
              data-workspace="command"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar command"
                data-mascot-shape="blob"
                data-state="idle"
                data-workspace-identity="command"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Projects · 项目"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="projects"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar projects"
                data-mascot-shape="capsule"
                data-state="idle"
                data-workspace-identity="projects"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Work · 工作台"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="work"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar work"
                data-mascot-shape="crystal"
                data-state="idle"
                data-workspace-identity="work"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Studios · 创作工作室"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="studios"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar studios"
                data-mascot-shape="wedge"
                data-state="idle"
                data-workspace-identity="studios"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
          <li
            class="workspaceEntry"
          >
            <button
              aria-label="Radar · 资讯雷达"
              aria-pressed="false"
              class="workspaceButton"
              data-workspace="radar"
              type="button"
            >
              <span
                aria-hidden="true"
                class="avatar radar"
                data-mascot-shape="cloud"
                data-state="idle"
                data-workspace-identity="radar"
              >
                <span
                  class="mark"
                />
                <span
                  class="status"
                />
              </span>
            </button>
          </li>
        </ul>
      </nav>
      <section
        aria-labelledby="harness-tools-heading"
        class="harnessTools"
      >
        <button
          aria-controls="harness-tools-list"
          aria-expanded="false"
          class="harnessMore"
          id="harness-tools-heading"
          type="button"
        >
          <span
            aria-hidden="true"
            class="harnessMoreGlyph"
          >
            ›
          </span>
          更多能力
        </button>
      </section>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
